# MyLyric

./: .gitignore  Lrc1.4.10.20220523.bugfixing.working.py  Lrc1.4.9.20220523.working.py  Lyric_Time_tab.py  Lyric_character.py  Lyric_content.py  Lyric_file.py  Lyric_line.py  Lyric_line_content.py  README.md  Tab.py  Time_tab.py
.github/workflows/: python-publish_acntpswd.yml
NewestVersion/: .pypirc  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
NewestVersion/MyLyric/: Lyric_Time_tab.py  Lyric_character.py  Lyric_file.py  Lyric_line.py  Lyric_line_content.py  __init__.py
OldVersion_OriginalTemplet/: Lrc1.4.10.20220523.bugfixing.working.py
PyLrc/: Lyric_file.py  Lyric_line_content.py  __init__.py  setup.py
Test_Files/: Lyric_content.py  test_Lyric_line_content.py  ブルーバード (青鸟) - 生物股长 (いきものがかり).lrc
Tester_Scripts/: test_Lyric_Time_tab.py  test_subclass_str.py
