[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MyLyric"
version = "2.1.0"
authors = [
  { name="Ding Zedong", email="2701690963@qq.com" },
]
description = "A small, light lyric file process packagee"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Byron-Ding/PyLrc"
"Bug Tracker" = "https://github.com/Byron-Ding/PyLrc/issues"