[metadata]
name = MyLyric
version = 3.0.0
author = Ding Zedong
author_email = 2701690963@qq.com
description = A small, light lyric file process package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Byron-Ding/MyLyric
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
keywords =
     lyric
     lyric processing
     lyric file
     lrc
     lrc file
     lrc processing
     lrc file process
     PyLrc
     MyLyric
     MyLrc
include_package_data = True

[options]
packages = find:
python_requires = >=3.10